samples/_failures_safe/1761610746_4caa09_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_92ea3ede.c:167: error: expected ‘;’, ‘,’ or ‘)’ at end of input
